// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-0 .bb-Icon {
  vertical-align: -0.125em;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Paragraph"
>
  Hello world
</div>
`;

exports[`composition hook should return with Paragraph props 1`] = `
Object {
  "className": "css-6s7dgi css-63it0p css-jwhr8m bb-Box bb-Paragraph",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-0 .bb-Icon {
  vertical-align: -0.125em;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Paragraph"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-0 .bb-Icon {
  vertical-align: -0.125em;
}

<p
  class="emotion-0 emotion-1 emotion-2 test bb-Box bb-Paragraph"
>
  hello world
</p>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-0 .bb-Icon {
  vertical-align: -0.125em;
}

<p
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Paragraph"
>
  Hello world
</p>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-0 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-2 {
  color: var(--bb-palette-primary,#000000) !important;
}

<p
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Paragraph"
>
  Hello world
</p>
`;

exports[`theming Paragraph.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0:not(:last-child) {
  margin-bottom: 1rem;
}

.emotion-0 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-0 {
  background-color: var(--bb-palette-red,#ff0000);
}

<p
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Paragraph"
>
  hello world
</p>
`;
